Dark mode is now persistent across pages and headers are the correct color

--- a/project-tst-1/style.css
+++ b/project-tst-1/style.css
@@ -98,7 +98,16 @@ body {
   body.dark nav {
     background-color: #222;
   }
+  
+  body.dark * {
+    color: #eee;
+  }
 
+  body.dark h1,
+  body.dark h2,
+  body.dark h3,
+  body.dark p,
+  body.dark button,
   body.dark a {
     color: #ddd;
   }
